removed error key from error message and fixed alignments

--- a/src/components/UI/DialogBox/DialogBox.module.css
+++ b/src/components/UI/DialogBox/DialogBox.module.css
@@ -48,5 +48,5 @@
 }
 
 .Title {
-  max-width: 395px;
+  max-width: auto;
 }
